# Demo485

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dnake/demo485/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  libs.mk  main.cpp  native-lib.cpp  sys_rs485.cpp  sys_rs485.h
app/src/main/cpp/include/: AutoMutex.h  DnakeFifo.h  DnakeMisc.h  dmsg.h  dxml.h  sGpio.h  tinyxml.h  types.h
app/src/main/java/com/dnake/demo485/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dnake/demo485/: ExampleUnitTest.java
